# schedulator

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  todo.md
.github/workflows/: ci.yml
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  server_error.rs
crates/server/src/database/: auth_token.rs  calendar.rs  calendar_users.rs  event.rs  item.rs  mod.rs  object.rs  planning.rs  planning_user.rs  planning_users.rs  repository.rs  reset_passwords.rs  slot.rs  subscription.rs  user.rs
crates/server/src/routes/: app_ctx.rs  mod.rs  permissions.rs  route_calendar.rs  route_event.rs  route_planning.rs  route_repository.rs  route_slot.rs  route_user.rs
crates/server/src/types/: database_ids.rs  enc_path.rs  enc_string.rs  item.rs  mod.rs  repository.rs  user.rs
crates/server/src/web_client/: mod.rs  static_file_server.rs
docker/: .env  Dockerfile  README.md  compose.yaml  config.json  download_run.sh
docker/scripts/: Dockerfile  config.json  download_run.sh
docker/test/: compose.yaml
docker/test/scripts/: config.json  download_run.sh
docker_minimal/: Dockerfile  compose.yaml  config.json  download_run.sh
migrations/1/: 1_schema.sql  2_type_slot_kind.sql  3_table_users.sql  4_table_calendars.sql  4_table_plannings.sql  5_table_calendar_users.sql  5_table_planning_user.sql  6_table_events.sql  6_table_slots.sql  7_table_authtoken.sql  8_table_reset_passwords.sql  migrate.sql
scripts/: Dockerfile  default_config.json  download_run.sh  reglement.json
webclient/: handlebars_custom_loader.js  handlebars_loader_function.js  package.json  webpack.analyze.dev.js  webpack.analyze.prod.js  webpack.common.js  webpack.dev.js  webpack.prod.js
webclient/client/: app.js  app.scss
webclient/public/: index.html
(+96 files in other folders)
