[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
postgres-from-row = "0.5.2"
postgres-types = "0.2.7"
serde = { version = "1.0.209", features = ["derive"] }
rand = "0.8.5"
tokio-postgres = "0.7.12"
tokio-util = "0.7.12"
blake3 = "1.5.4"
bcrypt = {version = "0.15.1"}
urlencoding = "2.1.3"
deunicode = "1.6.2"

axum = "0.7.7"
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-server = {  version = "0.7.1", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.7.0"
http-body-util = "0.1.2"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
serde_json = "1.0.128"
chrono = "0.4.31"
mime_guess = "2.0.5"
which = "7.0.3"
